--- a/Project/Assembly-CSharp.csproj
+++ b/Project/Assembly-CSharp.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
+    <Compile Include="Assets\Scripts\ServerMono.cs" />
+    <Compile Include="Assets\Scripts\ClientMono.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
