--- a/Project/NetSockets.csproj
+++ b/Project/NetSockets.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Assets\NetSockets\Server\Channel.cs" />
     <Compile Include="Assets\NetSockets\Server\Channels.cs" />
     <Compile Include="Assets\NetSockets\ThreadManager.cs" />
+    <Compile Include="Assets\NetSockets\Client\DataRetrievedArgs.cs" />
+    <Compile Include="Assets\NetSockets\Server\ClientDataArgs.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\NetSockets\NetSockets.asmdef" />
