--- a/Project/NetSockets.csproj
+++ b/Project/NetSockets.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\NetSockets\Server\Channel.cs" />
     <Compile Include="Assets\NetSockets\Server\Channels.cs" />
     <Compile Include="Assets\NetSockets\ThreadManager.cs" />
+    <Compile Include="Assets\NetSockets\ConnectionType.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\NetSockets\NetSockets.asmdef" />
