async tasks cleanup

--- a/Project/NetSockets.csproj
+++ b/Project/NetSockets.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\NetSockets\Server\Channels.cs" />
     <Compile Include="Assets\NetSockets\ThreadManager.cs" />
     <Compile Include="Assets\NetSockets\ConnectionType.cs" />
+    <Compile Include="Assets\NetSockets\ISocket.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\NetSockets\NetSockets.asmdef" />
