--- a/Project/NetSockets.csproj
+++ b/Project/NetSockets.csproj
@@ -66,7 +66,8 @@
     <Compile Include="Assets\NetSockets\Server\Channels.cs" />
     <Compile Include="Assets\NetSockets\ThreadManager.cs" />
     <Compile Include="Assets\NetSockets\ConnectionType.cs" />
-    <Compile Include="Assets\NetSockets\ISocket.cs" />
+    <Compile Include="Assets\NetSockets\Interfaces\ISocket.cs" />
+    <Compile Include="Assets\NetSockets\Interfaces\ISender.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\NetSockets\NetSockets.asmdef" />
