--- a/Project/NetSockets.csproj
+++ b/Project/NetSockets.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\NetSockets\ConnectionType.cs" />
     <Compile Include="Assets\NetSockets\Interfaces\ISocket.cs" />
     <Compile Include="Assets\NetSockets\Interfaces\ISender.cs" />
+    <Compile Include="Assets\NetSockets\Debugging.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\NetSockets\NetSockets.asmdef" />
