--- a/Project/NetSockets.csproj
+++ b/Project/NetSockets.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Assets\NetSockets\Interfaces\ISocket.cs" />
     <Compile Include="Assets\NetSockets\Server\Channels.cs" />
     <Compile Include="Assets\NetSockets\ThreadManager.cs" />
+    <Compile Include="Assets\NetSockets\Sockets\UdpSocket.cs" />
+    <Compile Include="Assets\NetSockets\Sockets\TcpSocket.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\NetSockets\NetSockets.asmdef" />
