--- a/Project/NetSockets.csproj
+++ b/Project/NetSockets.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\NetSockets\Sockets\UdpSocket.cs" />
     <Compile Include="Assets\NetSockets\Sockets\TcpSocket.cs" />
     <Compile Include="Assets\NetSockets\Sockets\SocketDataReceived.cs" />
+    <Compile Include="Assets\NetSockets\Sockets\IHttpSocket.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\NetSockets\NetSockets.asmdef" />
